apk: change suffix of installed new config file
Set in Makefile the suffix '-apk-new' for a config file that
needs to be installed with a new name to avoid overwriting the
existing config file for the same package.

Signed-off-by: Hannu Nyman <hannu.nyman@iki.fi>

--- a/package/system/apk/Makefile
+++ b/package/system/apk/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=apk
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 
 PKG_SOURCE_URL=https://gitlab.alpinelinux.org/alpine/apk-tools.git
 PKG_SOURCE_PROTO:=git
@@ -67,6 +67,8 @@ MESON_HOST_ARGS += \
 MESON_ARGS += \
 	$(MESON_COMMON_ARGS) \
 	-Dcrypto_backend=$(BUILD_VARIANT)
+
+TARGET_CFLAGS += -DCFGNEW_SUFFIX=\"-apk-new\"
 
 define Package/apk/conffiles
 /etc/apk/repositories.d/customfeeds.list
